// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser produces the expected output for example API definitions multi-file 1`] = `
Object {
  "endpoints": Object {
    "createUser": Object {
      "customErrorTypes": Object {},
      "defaultErrorType": Object {
        "kind": "void",
      },
      "method": "POST",
      "path": Array [
        Object {
          "content": "/users/create",
          "kind": "static",
        },
      ],
      "requestType": Object {
        "kind": "type-reference",
        "typeName": "CreaterUserRequest",
      },
      "responseType": Object {
        "kind": "type-reference",
        "typeName": "CreateUserResponse",
      },
    },
    "deleteUser": Object {
      "customErrorTypes": Object {
        "403": Object {
          "kind": "object",
          "properties": Object {
            "message": Object {
              "kind": "string",
            },
            "signedInAs": Object {
              "kind": "string",
            },
          },
        },
      },
      "defaultErrorType": Object {
        "kind": "object",
        "properties": Object {
          "message": Object {
            "kind": "string",
          },
        },
      },
      "method": "DELETE",
      "path": Array [
        Object {
          "content": "/users/",
          "kind": "static",
        },
        Object {
          "kind": "dynamic",
          "name": "userId",
          "type": Object {
            "kind": "string",
          },
        },
        Object {
          "content": "-confirmed",
          "kind": "static",
        },
      ],
      "requestType": Object {
        "kind": "void",
      },
      "responseType": Object {
        "kind": "null",
      },
    },
    "getUser": Object {
      "customErrorTypes": Object {},
      "defaultErrorType": Object {
        "kind": "void",
      },
      "method": "GET",
      "path": Array [
        Object {
          "content": "/users/",
          "kind": "static",
        },
        Object {
          "kind": "dynamic",
          "name": "userId",
          "type": Object {
            "kind": "string",
          },
        },
      ],
      "requestType": Object {
        "kind": "void",
      },
      "responseType": Object {
        "kind": "object",
        "properties": Object {
          "age": Object {
            "kind": "optional",
            "optional": Object {
              "kind": "number",
            },
          },
          "name": Object {
            "kind": "string",
          },
        },
      },
    },
  },
  "types": Object {
    "CreateUserResponse": Object {
      "kind": "object",
      "properties": Object {
        "success": Object {
          "kind": "boolean",
        },
      },
    },
    "CreaterUserRequest": Object {
      "kind": "object",
      "properties": Object {
        "name": Object {
          "kind": "string",
        },
      },
    },
    "GetUserResponse": Object {
      "kind": "object",
      "properties": Object {
        "name": Object {
          "kind": "string",
        },
      },
    },
  },
}
`;

exports[`Parser produces the expected output for example API definitions single-file 1`] = `
Object {
  "endpoints": Object {
    "createUser": Object {
      "customErrorTypes": Object {},
      "defaultErrorType": Object {
        "kind": "void",
      },
      "method": "POST",
      "path": Array [
        Object {
          "content": "/users/create",
          "kind": "static",
        },
      ],
      "requestType": Object {
        "kind": "type-reference",
        "typeName": "CreaterUserRequest",
      },
      "responseType": Object {
        "kind": "type-reference",
        "typeName": "CreateUserResponse",
      },
    },
    "deleteUser": Object {
      "customErrorTypes": Object {},
      "defaultErrorType": Object {
        "kind": "void",
      },
      "method": "DELETE",
      "path": Array [
        Object {
          "content": "/users/",
          "kind": "static",
        },
        Object {
          "kind": "dynamic",
          "name": "userId",
          "type": Object {
            "kind": "string",
          },
        },
        Object {
          "content": "-confirmed",
          "kind": "static",
        },
      ],
      "requestType": Object {
        "kind": "void",
      },
      "responseType": Object {
        "kind": "null",
      },
    },
    "getUser": Object {
      "customErrorTypes": Object {},
      "defaultErrorType": Object {
        "kind": "void",
      },
      "method": "GET",
      "path": Array [
        Object {
          "content": "/users/",
          "kind": "static",
        },
        Object {
          "kind": "dynamic",
          "name": "userId",
          "type": Object {
            "kind": "string",
          },
        },
      ],
      "requestType": Object {
        "kind": "void",
      },
      "responseType": Object {
        "kind": "object",
        "properties": Object {
          "age": Object {
            "kind": "optional",
            "optional": Object {
              "kind": "number",
            },
          },
          "name": Object {
            "kind": "string",
          },
        },
      },
    },
  },
  "types": Object {
    "CreateUserResponse": Object {
      "kind": "union",
      "types": Array [
        Object {
          "kind": "object",
          "properties": Object {
            "errors": Object {
              "elements": Object {
                "kind": "string",
              },
              "kind": "array",
            },
            "success": Object {
              "kind": "boolean-constant",
              "value": false,
            },
          },
        },
        Object {
          "kind": "object",
          "properties": Object {
            "confirmation": Object {
              "kind": "string",
            },
            "success": Object {
              "kind": "boolean-constant",
              "value": true,
            },
          },
        },
      ],
    },
    "CreaterUserRequest": Object {
      "kind": "object",
      "properties": Object {
        "name": Object {
          "kind": "string",
        },
      },
    },
    "GetUserResponse": Object {
      "kind": "object",
      "properties": Object {
        "name": Object {
          "kind": "string",
        },
      },
    },
  },
}
`;
